Disable DirectComposition on Windows <10

On Windows 8 and 8.1 the DirectComposition content doesn't seem to
appear until after the window does its initial show animation. However
the GDI content behind it still updates, which causes the window to
flash black for a few frames when it's first created.

This seems to be fixed on Windows 10, but before that there doesn't seem
to be a good workaround. So for now we'll disable DirectComposition on
Windows 8 and 8.1.

BUG=593274,588588
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1778593004

Cr-Commit-Position: refs/heads/master@{#380326}